# cisco-collector

./: README  README.md  build.sh  configure.ac
conf/: localnet.cfg
src/: Makefile.am  ciscocollect  config.h  config.h.in  config.h.in~  main  main.c
src/.deps/: main.Po
